# preference

./: LICENSE.txt  README.md  preference.cabal
src/: Candidate.hs  ElectionClasses.hs  Main.hs  PrefSeqUtil.hs  PrefStringUtil.hs  check.txt
src/OurTests/: TestStuff.hs
testdata/: blaxland2013.txt  melbourne2010.txt  melbourne2013.txt  warringah2013.txt
