name: preference
version: 0.1.0
cabal-version: >=1.2
build-type: Simple
license: AllRightsReserved
license-file: ""
synopsis: Testing Preferential voting
description: Fill in later
data-dir: ""

Library
    Build-depends: split
    Build-depends: text
    Build-depends: HUnit,
                   test-framework,
                   test-framework-hunit,
                   test-framework-quickcheck2


executable preference
    build-depends: QuickCheck -any, base -any
    main-is: Main.hs
    buildable: True
    hs-source-dirs: src

test-suite test-preference
    build-depends: QuickCheck -any, base -any
    type: exitcode-stdio-1.0
    main-is: Main.hs
    buildable: True
    cpp-options: -DMAIN_FUNCTION=testMain
    hs-source-dirs: src
