name: preference
version: 0.1.0
cabal-version: >=1.2
build-type: Simple
license: AllRightsReserved
license-file: ""
synopsis: Testing Preferential voting
description: Fill in later
data-dir: ""
 
library
    build-depends: HUnit -any, QuickCheck -any, base -any, split -any,
                   test-framework -any, test-framework-hunit -any,
                   test-framework-quickcheck2 -any, text -any
    exposed: True
    buildable: True
    hs-source-dirs: .
 
executable preference
    build-depends: HUnit -any, QuickCheck -any, base -any, split -any,
                   test-framework -any, test-framework-hunit -any,
                   test-framework-quickcheck2 -any, text -any
    main-is: Main.hs
    buildable: True
    hs-source-dirs: src
 
test-suite test-preference
    build-depends: HUnit -any, QuickCheck -any, base -any, split -any,
                   test-framework -any, test-framework-hunit -any,
                   test-framework-quickcheck2 -any, text -any
    type: exitcode-stdio-1.0
    main-is: Main.hs
    buildable: True
    cpp-options: -DMAIN_FUNCTION=testMain
    hs-source-dirs: src